# SetConstraintsSMT

./: .gitignore  README.md  SetConstraints.cabal  badCheck.sc  bzip2_constr_cleaned.banshee  example.txt  goodCheck.sc  jeremond@remote.cs.ubc.ca  project.cabal  stack.yaml  test_master.smt-lib
app/: Main.hs
src/: Andersen.hs  ArgParse.hs  MonadicTheorySolver.hs  SMTHelpers.hs  SolveMonadic.hs  SolveSetConstraints.hs  Syntax.hs  TreeGrammar.hs  TseitinPredicates.hs
src/SetConstraints/: Solve.hs
